eng mishmaat venochechut

--- a/english.html
+++ b/english.html
@@ -463,6 +463,8 @@ Error message and password prompt
 
 <li>Delicatessen Chez Genevieve</li>
 
+<li>Discipline</li>
+
 <li>Dishes in the sink</li>
 
 <li>DJ and discs dudet</li>
@@ -881,8 +883,6 @@ Error message and password prompt
 
 <li>Papa Yoel</li>
 
-<li>Parenthood</li>
-
 <li>Passover Seder at Dad's and Tirza's</li>
 
 <li>Pasta Mia</li>
@@ -912,6 +912,8 @@ Error message and password prompt
 <li>Powders</li>
 
 <li>Praying at Bilu garden</li>
+
+<li>Presence</li>
 
 <li>Pride here</li>
 
@@ -9163,7 +9165,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200605134439277" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200802132424940" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200813152456029" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9172,7 +9174,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Dishes in the sink]] [[Coen sister]] [[Gassisted living]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="Discipline [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9192,7 +9194,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200802132842179" title="$:/temp/search">
+<div created="20161023184814872" modified="20200813152409431" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9923,13 +9925,13 @@ This morning, while I went out to buy [[bread|Lehamim and corona]], I decided th
 <div _canonical_uri="pictures/bjVmMLrT1A6cNJ2g.jpg" created="20161024112200319" modified="20170119202336098" tags="" title="bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20200330155359346" modified="20200403101834769" tags="[[The archive's trustees]] [[Hunky Dory]] [[Palms of the hands]] [[Corona beings]]" title="Birkat Cohanim">
+<div created="20200330155359346" modified="20200810174138653" tags="[[The archive's trustees]] [[Hunky Dory]] [[Palms of the hands]] [[Corona beings]]" title="Birkat Cohanim">
 <pre>[img[pictures/birkat-cohanim.jpg]]
 
 
 !!![[Yoyo]]:
 
-During [[Purim|https://en.wikipedia.org/wiki/Purim]] 5780 I wanted to dress up as a [[Cohen|https://en.wikipedia.org/wiki/Priestly_Blessing]], but the Corona kept me at home with a mask almost till my knees. 
+On [[Purim|https://en.wikipedia.org/wiki/Purim]] 5780 I wanted to dress up as a [[Cohen|https://en.wikipedia.org/wiki/Priestly_Blessing]], but the Corona kept me at home with a face mask long enough to cover my knees.
 
 
 
@@ -10111,8 +10113,67 @@ When looking online after cafés from somewhere that is not Europe, except for S
 
  &lt;&lt;heblink [[קנלוני]]&gt;&gt;</pre>
 </div>
-<div created="20200306165452018" modified="20200306165614528" tags="Baking [[Christmas dinner Recipes]] Recipes" title="Caramelized pecan pie">
+<div created="20200306165452018" modified="20200813153142696" tags="Baking [[Christmas dinner Recipes]] Recipes" title="Caramelized pecan pie">
 <pre>[img[pictures/pekan-pie.jpg]]
+
+
+!!![[Eva|Eva Cohen]]:
+
+__Raw materials for the caramel:__
+
+•	100 g of butter
+
+•	A cup and a half of sugar
+
+•	A cup and a half of whipping cream
+
+__Raw materials for the dough__
+
+
+•	150 g of butter
+
+•	Two spoons of sugar
+
+•	Half a spoon of vanilla sugar
+
+•	Two spoons of milk
+
+•	One egg
+
+•	Two cups of flour
+ 
+•	A flat little spoon of baking powder
+
+•	A pinch of salt
+
+__The method__
+
+__The caramel:__
+
+•	Melt the butter, and when it's melted add the sugar. Try not to stir, but to move gently the pot from one side to the other over a large flame, so the sugar won't crystalize. The sugar slowly melts, becomes golden and browns. The bubbles go and multiply and become thicker…. When it reaches a little dark toffee brown color, and fumes go up from the inner side of the pot, turn off the flame and pour very!! slowly while stirring steadily the pre-prepared whipping cream into the caramel. 
+
+''A warning- the caramel starts to boil like hell with the pouring of the whipped cream, so you have to be ready, to keep a fair distance, to pour slowly and not to freak out. Stir the whole time, pour little each time and stir until the caramel chills and a thick soft liquid is received. While the caramel cools down, arrange on the dough the nut halves. Pour gently over them the caramel.''
+
+__
+Preparing the dough:__
+
+__ in a food processor or in an electric processor with a guitar blade.__
+
+•	First put the butter and the sugar and activate the appliance until a smooth paste is received.
+
+•	Add the other ingredients and keep stirring until a ball of dough is received.
+
+•	Cover the dough and cool it.
+
+•	Flat the dough in a 36 round baking dish and pierce it with a fork lightly.
+
+•	Bake for about ten minutes in 170 degrees 
+
+•	Take out the dough and arrange the pecans over it.
+
+•	Gently pour over the pecans the caramel, without completely covering them (the leftover caramel can be put in the refrigerator or the freezer and be used for another pie)
+
+•	Bake at 170 degrees for 40—50 minutes, until it gets golden.
 
 
 
@@ -10353,8 +10414,17 @@ Yours- Dandan.
 
  &lt;&lt;heblink [[פטה כבד עוף]]&gt;&gt;</pre>
 </div>
-<div created="20200212205329430" modified="20200426140217057" tags="Mothers [[Single parent children]] [[Dandan went]] Families" title="Children">
+<div created="20200212205329430" modified="20200813150541897" tags="Mothers [[Single parent children]] [[Dandan went]] Families" title="Children">
 <pre>[img[pictures/yeladim.jpg]]
+
+
+!!![[Rushell]]:
+
+Children and their rights are the most important, and who and what they'll be shouldn't be affected by your plan or your request, the bigger the risk they are in, the riskier it can get. Not just the obvious like violent is dangerous. Lack of love is also dangerous. Lack of a loving touch, lack of attention, lack of caring, lack of respect, lack of acceptance, lack of being seen - are dangerous. [[These are all basic|https://en.wikipedia.org/wiki/Convention_on_the_Rights_of_the_Child]]. Lately I've been exposed to the [[ten commandments|https://en.wikipedia.org/wiki/Ten_Commandments]] and I think I would have added to the fifth commandment:
+
+[[Honour thy children|https://www.youtube.com/watch?v=M9BNoNFKCBI]], so that they won't murder, so that they won't lie, so that they won't steal, so that they won't covet, honour thy children so that they won't be scared at all, so that they will be happier, calmer, better. So that they will believe in the equality of men, animals and plants, without religion, race or gender differences. So that they will believe in peace and not in war. So that they will live for themselves exactly as they are, and let live.
+
+
 
 &lt;&lt;list-links filter:&quot;[tag[Children]]&quot;&gt;&gt;
 
@@ -10887,6 +10957,22 @@ That's it, Chez Genevieve has opened its gates on the day before yesterday. I'm 
  &lt;&lt;heblink [[דליקטסן אצל ז'נבייב]]&gt;&gt;
 </pre>
 </div>
+<div created="20200813150440922" modified="20200813172426890" tags="Houses Kitchens" title="Discipline">
+<pre>
+
+[img[pictures/discipline.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[משמעת]]&gt;&gt;
+
+
+
+
+
+</pre>
+</div>
 <div created="20200308103047519" modified="20200802132839289" tags="[[On the road to somewhere]] Children [[Food addicts]] Kitchens Houses [[The Baumans]]" title="Dishes in the sink">
 <pre>[img[pictures/kelim-bakiyor.jpg]]
 
@@ -10924,8 +11010,15 @@ She and the hairdresser are the responsible adults in this story.
  &lt;&lt;heblink [[אחוזת דאונטון]]&gt;&gt;
 </pre>
 </div>
-<div created="20200202160144751" modified="20200217131317059" tags="[[The team]] Children" title="Dreams that we've dreamt">
+<div created="20200202160144751" modified="20200810181155806" tags="[[The team]] Children" title="Dreams that we've dreamt">
 <pre>[img[pictures/chalomot-shechalamnoo.jpg]]
+
+
+!!![[Yoyo]]:
+
+I've always dreamt about becoming a [[cleaning inspector in a restaurant's kitchen|Cleaning properly]], but what's even more beautiful is, that this dream coming true has awaken more dreams. 
+
+
 
 &lt;&lt;list-links filter:&quot;[tag[Dreams that we've dreamt]]&quot;&gt;&gt;
 
@@ -11221,7 +11314,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20200802114413092" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20200807120136074" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -11594,8 +11687,7 @@ Also now, since I've opened this site, she hasn't stopped [[writing|Me writing]]
 </pre>
 </div>
 <div created="20200802113537594" modified="20200802113808719" tags="[[Searching for Iry]]" title="Gura narrates 01">
-<pre>
-[img[pictures/mechapeset-1.jpg]]
+<pre>[img[pictures/mechapeset-1.jpg]]
 
 
 
@@ -11603,16 +11695,14 @@ Also now, since I've opened this site, she hasn't stopped [[writing|Me writing]]
  &lt;&lt;heblink [[גורה מספרת 01]]&gt;&gt;</pre>
 </div>
 <div created="20200802113930884" modified="20200802114046663" tags="[[Searching for Iry]]" title="Gura narrates 02">
-<pre>
-[img[pictures/mechapeset-2.jpg]]
+<pre>[img[pictures/mechapeset-2.jpg]]
 
 
 
  &lt;&lt;heblink [[גורה מספרת 02]]&gt;&gt;</pre>
 </div>
 <div created="20200802114250889" modified="20200802114442905" tags="[[Searching for Iry]]" title="Gura narrates 03">
-<pre>
-[img[pictures/mechapeset-3.jpg]]
+<pre>[img[pictures/mechapeset-3.jpg]]
 
 
  &lt;&lt;heblink [[גורה מספרת 03]]&gt;&gt;
@@ -11906,8 +11996,15 @@ The [[Hora|https://en.wikipedia.org/wiki/Hora_(dance)]] is danced in a [[circle|
 
  &lt;&lt;heblink [[סוסים לדבק]]&gt;&gt;</pre>
 </div>
-<div created="20200216163004939" modified="20200216163303279" tags="TV [[TV Series]] Music Houses" title="House">
+<div created="20200216163004939" modified="20200810171341573" tags="TV [[TV Series]] Music Houses" title="House">
 <pre>[img[pictures/house.jpg]]
+
+
+
+!!![[The team]]:
+
+
+In the name of [[Wilson's|https://www.imdb.com/name/nm0000494/?ref_=tt_cl_t3]] rehabilitative project of [[House|https://www.imdb.com/name/nm0491402/?ref_=tt_cl_t1]], Wilson pays [[Foreman|https://www.imdb.com/name/nm0004898/?ref_=tt_cl_t2]] and [[Chase|https://www.imdb.com/name/nm0817980/?ref_=tt_cl_t4]] ([[but not only|https://www.youtube.com/watch?v=Xz3oTbcxFkA]]) to go and hang out with House, and then comes a wonderful [[karaoke scene|https://www.youtube.com/watch?v=BVGGG2J0_7M]] with the song [[Midnight Train to Georgia|https://www.youtube.com/watch?v=v78-ftcqpNw]], a big hit back in 1973. It happens towards the end of the sixth season, where House, who hospitalized himself in a rehab center and also was released, is getting better and so is the script. [[It's|https://www.imdb.com/title/tt0412142/]] getting nicer and funnier. [[13|https://www.imdb.com/name/nm1312575/?ref_=tt_cl_t9]] is also stunning. We haven't finished season 6 yet, meaning there's still the end of the sixth and another two, but by the [[look of this clip|https://www.youtube.com/watch?v=O8pCxcUURaw]], a little better and we'll lose it.
 
 
 
@@ -12301,8 +12398,13 @@ I think I've watched most of the films of this sensitive beautiful [[prince|http
 
 </pre>
 </div>
-<div created="20200322155655155" modified="20200322155835396" tags="Houses Mothers" title="Joe and Norma">
+<div created="20200322155655155" modified="20200810172914267" tags="Houses Mothers" title="Joe and Norma">
 <pre>[img[pictures/jo-ve-norma.jpg]]
+
+!!![[Eva|Eva Cohen]]:
+
+
+Joe and [[Norma|Stories I`ve told Norma]] took me in and adopted me when I was 18 and came here from the [[estate|The estate where I grew up]].
 
 
 
@@ -12984,10 +13086,7 @@ I've reached Malo after a story my granny's grandma told me about her grandma's 
 </pre>
 </div>
 <div created="20200313120734731" modified="20200802124839787" tags="HH" title="Marina Zoto">
-<pre>
-
-
-A [[Gassisted living]] project on [[Tethys ocean]].
+<pre>A [[Gassisted living]] project on [[Tethys ocean]].
 
 
 [img[pictures/marina-zuto.jpg]]
@@ -13735,13 +13834,6 @@ He did his best at raising [[us|The Baumans]] as good people, and in most cases 
 
  &lt;&lt;heblink [[אבא יואל]]&gt;&gt;</pre>
 </div>
-<div created="20200226103015146" modified="20200426141503752" tags="TV [[TV Series]] Families" title="Parenthood">
-<pre>[img[pictures/parenthood.jpg]]
-
-
-
- &lt;&lt;heblink [[הורים במשרה מלאה]]&gt;&gt;</pre>
-</div>
 <div created="20200217185654348" modified="20200426141519063" tags="[[The Baumans]] Meals [[Food addicts]] [[The archive's trustees]] Families" title="Passover Seder at Dad's and Tirza's">
 <pre>[img[pictures/lel-haseder-ezel-aba.jpg]]
 
@@ -13760,8 +13852,36 @@ He did his best at raising [[us|The Baumans]] as good people, and in most cases 
 
  &lt;&lt;heblink [[פסטה מיאה]]&gt;&gt;</pre>
 </div>
-<div created="20200306165732517" modified="20200306165851575" tags="Recipes [[Christmas dinner Recipes]]" title="Pavlova">
+<div created="20200306165732517" modified="20200813152345335" tags="Recipes [[Christmas dinner Recipes]]" title="Pavlova">
 <pre>[img[pictures/pavlova.jpg]]
+
+
+!!![[Philip]]:
+
+Hello there
+
+Well,
+
+I'm not at all a kitchen guy, except that recently I have been surrounded by those, which is great.
+
+But, 
+
+I've learned an innovation with a personal touch,
+
+And when I'm invited to festive meals, I buy, usually at the bakery shop near the house or in the one near the Clinique- meringue bottoms.
+
+Large, small, whatever I feel like at the moment.
+
+I also buy kinds of strawberries, raspberries, etc.
+
+I grind half of the raspberry and the berries with vanilla sugar and lemon by the taste and I leave the other half as it is.
+
+Beside it I whip to a steady whipped cream two containers of whipping cream with four flat spoons of sugar 
+
+I pack everything separately, and in the moment of truth I bring them together
+
+And everybody has a great time
+
 
 
  &lt;&lt;heblink [[פבלובה]]&gt;&gt;
@@ -13936,6 +14056,21 @@ At Independence day 5780 with easing and but also lockdown news, I dropped Nano 
 
 
  &lt;&lt;heblink [[מתפללים בגינת בילו]]&gt;&gt;</pre>
+</div>
+<div created="20200807120029563" modified="20200813172416409" tags="[[Sofa therapy]] [[Corona beings]]" title="Presence">
+<pre>[img[pictures/presence.jpg]]
+
+
+
+
+
+
+ &lt;&lt;heblink [[נוכחות]]&gt;&gt;
+
+
+
+
+</pre>
 </div>
 <div created="20200220153930451" modified="20200605134240062" tags="[[Here in the Ghetto]] Metafiction [[On the road to somewhere]] Cafés" title="Pride here">
 <pre>[img[pictures/pride.jpg]]
@@ -14868,8 +15003,15 @@ In the yellow heat that came after the fall of the stardust of Corona days, I re
 
 </pre>
 </div>
-<div created="20200213163836811" modified="20200213165310346" tags="[[How many songs can you even invent at all]] [[The team]] [[The Baumans]] Metafiction [[Monkeys with car keys]]" title="The archive's trustees">
+<div created="20200213163836811" modified="20200810173435983" tags="[[How many songs can you even invent at all]] [[The team]] [[The Baumans]] Metafiction [[Monkeys with car keys]]" title="The archive's trustees">
 <pre>[img[pictures/neemaney.jpg]]
+
+!!![[Yoyo]]:
+
+If we wanna be real, the archive trustees are still just [[Gura]] and myself.
+But, we are all [[breastplate sisters|Breastplate sisters]].
+
+
 
 &lt;&lt;list-links filter:&quot;[tag[The archive's trustees]]&quot;&gt;&gt;
 
@@ -14920,8 +15062,16 @@ She is the owner of an old green Ford pickup truck (the little machine).
  &lt;&lt;heblink [[הברמנית]]&gt;&gt;
 </pre>
 </div>
-<div created="20200213165708457" modified="20200213165847313" tags="[[The archive's trustees]] [[True stories]] Houses" title="The Baumans">
+<div created="20200213165708457" modified="20200810173224190" tags="[[The archive's trustees]] [[True stories]] Houses" title="The Baumans">
 <pre>[img[pictures/baumans.jpg]]
+
+
+!!![[Yoyo]]:
+
+This is a part of the living room in the village where we marvelously [[grew up|Gura`s tale]], with dad Yoel and mother Dina Rip. Nadia the firstborn, Keren, myself, Gigi and sweet little Gura.
+
+
+
 
 &lt;&lt;list-links filter:&quot;[tag[The Baumans]]&quot;&gt;&gt;
 
@@ -15976,8 +16126,15 @@ After searching for a while, there comes a time when [[Leonard|https://www.imdb.
 
 </pre>
 </div>
-<div created="20200313121609318" modified="20200313121724973" tags="[[Dreams that we've dreamt]] Children" title="Umbrella car">
+<div created="20200313121609318" modified="20200810180549642" tags="[[Dreams that we've dreamt]] Children" title="Umbrella car">
 <pre>[img[pictures/oto-mitriya.jpg]]
+
+
+!!![[Iry]]:
+
+In my childhood, the distance between my parents' house and the elementary school, was about 400 meters, and included three turns.
+
+It wasn't a problem in the summer, and I also had a bike, but in the winter I had always [[dreamt|Opinionated]] that I have a three-wheel-car, with a cover in the shape of a giant see through umbrella.
 
 
 
