--- a/index.html
+++ b/index.html
@@ -17109,7 +17109,7 @@ We rise to play a greater part.
 
 </pre>
 </div>
-<div created="20200807115915657" modified="20200813172024632" tags="[[טיפולים מהספה]] [[הלכות קורונה]]" title="נוכחות">
+<div created="20200807115915657" modified="20200813173519187" tags="[[טיפולים מהספה]] [[הלכות קורונה]]" title="נוכחות">
 <pre>[img[pictures/presence.jpg]]
 
 
@@ -17121,7 +17121,7 @@ We rise to play a greater part.
 
 ובאמת לא פעם קשה להשלים עם הגוף או המקום אליהם נולדנו.
 
-אני שוכב על הספה ונושם. שואף ונושף, מניח לצוואר להיות חופשי ולאוויר להיכנס אל הגוף עד שלאט יגיע לכל פינה בו. בהתחלה אני נושם לבית החזה, לאט, לגב, לסרעפת, לבטן. חום הנשימה מתחיל להתפשט בגוף ועם כל נשימה אני עוד ועוד נותן לאוויר לרדת לאגן, לירכיים, לשוקיים, לקרסוליים, לכפות הרגלים, לאצבעות. נוכח בכל אצבע. מרגיש את המקומות הכואבים או החלשים ונושם אליהם.  אני נושם גם אל הכתפיים, הזרועות, האמות, שורש כף היד, כף היד, האצבעות, אחת אחת מרגיש את עצמי בתוכן ובגוף כולו. את כל זה אני עושה בסבלנות ובשקט ואפילו בהנאה. רק מרגיש את עצמי בתוכי, עד שאהיה אחד.
+אני שוכב על הספה ונושם. שואף ונושף, מניח לצוואר להיות חופשי ולאוויר להיכנס אל הגוף עד שלאט יגיע לכל פינה בו. בהתחלה אני נושם לבית החזה, לאט, לגב, לסרעפת, לבטן. חום הנשימה מתחיל להתפשט בגוף ועם כל שאיפה אני עוד ועוד נותן לאוויר לרדת לאגן, לירכיים, לשוקיים, לקרסוליים, לכפות הרגלים, לאצבעות. נוכח בכל אצבע. מרגיש את המקומות הכואבים או החלשים ונושם אליהם.  אני נושם גם אל הכתפיים, הזרועות, האמות, שורש כף היד, כף היד, האצבעות, אחת אחת מרגיש את עצמי בתוכן ובגוף כולו. את כל זה אני עושה בסבלנות ובשקט ואפילו בהנאה. רק מרגיש את עצמי בתוכי, עד שאהיה אחד.
 
 
 
