--- a/index.html
+++ b/index.html
@@ -9257,7 +9257,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200601071032468" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200813154135245" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200815093419859" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9266,7 +9266,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="נוכחות [[טיפולים מהספה]] משמעת מתכונים [[האחיות כהן]]" title="$:/StoryList">
+<div list="אירי נוכחות [[טיפולים מהספה]] מתכונים" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9286,7 +9286,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200813153445664" title="$:/temp/search">
+<div created="20161023184814872" modified="20200816164451996" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10405,7 +10405,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Mothers]]&gt;&gt;</pre>
 </div>
-<div created="20161206200127567" modified="20200802113250452" tags="[[אחות כהן]] [[אירי וגורה]] [[אירי טוענת]] [[נאמני הגנזך]] [[האנקי דורי]]" title="אירי">
+<div created="20161206200127567" modified="20200816164501800" tags="[[אחות כהן]] [[אירי וגורה]] [[אירי טוענת]] [[נאמני הגנזך]] [[האנקי דורי]]" title="אירי">
 <pre>[img[pictures/iri.jpg]]
 
 !!![[אלפרד]]:
@@ -12651,12 +12651,12 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20170505224151892" modified="20200225165716537" tags="[[אחיות חוץ]] מוזיקה [[מטא בדיון]]" title="הדוד האמיתי">
+<div created="20170505224151892" modified="20200815093318373" tags="[[אחיות חוץ]] מוזיקה [[מטא בדיון]]" title="הדוד האמיתי">
 <pre>[img[pictures/hadod-haamiti.jpg]]
 
 !!![[יויו]]:
 
-כש[[הדוד|https://thedod.github.io#עברית]], שכדאי מאד להקשיב למה שיש לו להגיד, הגיע אלינו, די מהר, הכל התחיל להסתדר במקום. 
+כש[[הדוד|https://zzzen.com/]], שיש לו מה להגיד, הגיע אלינו, כל עניין [[האתר|האחיות כהן]] התחיל להסתדר במקום. 
 
 
 
@@ -16921,7 +16921,7 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[Game of Thrones]]&gt;&gt;</pre>
 </div>
-<div created="20200813145734453" modified="20200813172353486" tags="מטבחים בתים" title="משמעת">
+<div created="20200813145734453" modified="20200815094634948" tags="מטבחים בתים [[הלכות קורונה]]" title="משמעת">
 <pre>[img[pictures/discipline.jpg]]
 
 
@@ -17109,7 +17109,7 @@ We rise to play a greater part.
 
 </pre>
 </div>
-<div created="20200807115915657" modified="20200813173519187" tags="[[טיפולים מהספה]] [[הלכות קורונה]]" title="נוכחות">
+<div created="20200807115915657" modified="20200815094642519" tags="[[טיפולים מהספה]] [[הלכות קורונה]]" title="נוכחות">
 <pre>[img[pictures/presence.jpg]]
 
 
