--- a/english.html
+++ b/english.html
@@ -9165,7 +9165,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200605134439277" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200813152456029" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200813172440513" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9174,7 +9174,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Discipline [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10957,7 +10957,7 @@ That's it, Chez Genevieve has opened its gates on the day before yesterday. I'm 
  &lt;&lt;heblink [[דליקטסן אצל ז'נבייב]]&gt;&gt;
 </pre>
 </div>
-<div created="20200813150440922" modified="20200813172426890" tags="Houses Kitchens" title="Discipline">
+<div created="20200813150440922" modified="20200813174716423" tags="Houses Kitchens [[Corona beings]]" title="Discipline">
 <pre>
 
 [img[pictures/discipline.jpg]]
