cars and chimney

--- a/english.html
+++ b/english.html
@@ -363,6 +363,8 @@ Error message and password prompt
 
 <li>Caraway cookies</li>
 
+<li>Cars here</li>
+
 <li>Cat Sisters</li>
 
 <li>Cauliflower in a frying Pan</li>
@@ -394,6 +396,8 @@ Error message and password prompt
 <li>Children</li>
 
 <li>Chili cone carne</li>
+
+<li>Chim Chimney</li>
 
 <li>Chinese pickles</li>
 
@@ -9174,7 +9178,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Cars here]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9194,7 +9198,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200813152409431" title="$:/temp/search">
+<div created="20161023184814872" modified="20200816164621124" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10188,6 +10192,15 @@ __ in a food processor or in an electric processor with a guitar blade.__
  &lt;&lt;heblink [[עוגיות קימל]]&gt;&gt;
 </pre>
 </div>
+<div created="20200823174426318" modified="20200823174542079" tags="[[Here in the Ghetto]] [[True stories]]" title="Cars here">
+<pre>
+[img[pictures/carshere.jpg]]
+
+
+ &lt;&lt;heblink [[מכוניות כאן]]&gt;&gt;
+
+</pre>
+</div>
 <div created="20200213183239085" modified="20200213212523487" tags="[[Monkeys with car keys]]" title="Cat Sisters">
 <pre>[img[pictures/achayot-chatul.jpg]]
 
@@ -10414,7 +10427,7 @@ Yours- Dandan.
 
  &lt;&lt;heblink [[פטה כבד עוף]]&gt;&gt;</pre>
 </div>
-<div created="20200212205329430" modified="20200813150541897" tags="Mothers [[Single parent children]] [[Dandan went]] Families" title="Children">
+<div created="20200212205329430" modified="20200823174517729" tags="Mothers [[Single parent children]] [[Dandan went]] Families" title="Children">
 <pre>[img[pictures/yeladim.jpg]]
 
 
@@ -10440,6 +10453,15 @@ Children and their rights are the most important, and who and what they'll be sh
 
 
  &lt;&lt;heblink [[צ'ילי כמו קארנה]]&gt;&gt;</pre>
+</div>
+<div created="20200818121005138" modified="20200818121305447" tags="[[Sofa therapy]]" title="Chim Chimney">
+<pre>[img[pictures/chimchimney.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[צ'ים צ'ימני]]&gt;&gt;
+</pre>
 </div>
 <div created="20200306141207909" modified="20200306141321557" tags="Recipes [[Vegan recipes]] [[Christmas dinner Recipes]]" title="Chinese pickles">
 <pre>[img[pictures/chamoozim-sinim.jpg]]
@@ -10959,7 +10981,6 @@ That's it, Chez Genevieve has opened its gates on the day before yesterday. I'm 
 </div>
 <div created="20200813150440922" modified="20200813174716423" tags="Houses Kitchens [[Corona beings]]" title="Discipline">
 <pre>
-
 [img[pictures/discipline.jpg]]
 
 
