--- a/index.html
+++ b/index.html
@@ -1047,6 +1047,8 @@ Error message and password prompt
 
 <li>מכולת האחים</li>
 
+<li>מכוניות כאן</li>
+
 <li>מלפפונים חמוצים</li>
 
 <li>ממשיכים לדמם</li>
@@ -1274,6 +1276,8 @@ Error message and password prompt
 <li>פרינס</li>
 
 <li>צ'ילי כמו קארנה</li>
+
+<li>צ'ים צ'ימני</li>
 
 <li>צ'ן</li>
 
@@ -9266,7 +9270,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="אירי נוכחות [[טיפולים מהספה]] מתכונים" title="$:/StoryList">
+<div list="[[מכוניות כאן]] [[צ'ים צ'ימני]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10702,7 +10706,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20200813153547650" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20200823174613238" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -16565,6 +16569,21 @@ We rise to play a greater part.
 &lt;&lt;englink [[HaAchims grocery store]]&gt;&gt;
 </pre>
 </div>
+<div created="20200823173415382" modified="20200823174637437" tags="[[כאן בגטו]] [[סיפורים אמיתיים]]" title="מכוניות כאן">
+<pre>
+[img[pictures/carshere.jpg]]
+
+
+
+!!![[תומר]]:
+
+קומיאורי ואני מתקרבים למעבר החציה המוביל לפארק והיא אומרת לי: &quot;זה מדהים אותי שאנשים קונים או מכוניות שחורות, או אפורות, או לבנות&quot;, ואז מוסיפה: &quot;אני מאד מעריכה את אלה שקונים מכונית צבעונית&quot;, ומחייכת את חיוכה הנהדר.
+
+
+
+
+&lt;&lt;englink [[Cars here]]&gt;&gt;</pre>
+</div>
 <div created="20170409072116141" modified="20200306151210477" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]] מתכונים" title="מלפפונים חמוצים">
 <pre>[img[pictures/melafefonim-chamuzim.jpg]]
 
@@ -19160,6 +19179,21 @@ Fapina''
 
 &lt;&lt;englink [[Chili cone carne]]&gt;&gt;
 
+</pre>
+</div>
+<div created="20200818120840697" modified="20200823174843111" tags="[[טיפולים מהספה]]" title="צ'ים צ'ימני">
+<pre>[img[pictures/chimchimney.jpg]]
+
+
+!!![[רוז'ה]]:
+
+אני קורא לתרגול הזה [[צ'ים צ'ימני|https://www.youtube.com/watch?v=BGCmVDl46rY]], כי זה מה שהוא מזכיר לי, ניקוי ארובה, שמתחילה בתחתית האגן ועולה לאורך עמוד השדרה, דרך החיבור שלו לראש ומעליו וכוללת [[שבע צ'אקרות|https://he.wikipedia.org/wiki/%D7%A6%27%D7%90%D7%A7%D7%A8%D7%94]] דרכן אני עובר כשאני מפלס את הדרך. אני שוכב בנח, מרפה את המקומות המתוחים בגוף ונושם. אני מתחיל מצ'אקרת הבסיס. עם כל הכנסת אוויר מפלס אט דרך מעלה  לעבר הצ'אקרה השניה, צ'אקרת המין, ובכל נשיפה חוזר לשורש. את הפעולה הזו אני ממשיך גם למקלעת השמש שהיא הצ'אקרה השלישית, אחר כך לצ'אקרת הלב, שמעליה צ'אקרת הגרון, אחר כך לצ'אקרה השישית היא העין השלישית ולבסוף לכתר שנפתח מעל הראש אל האינסוף. 
+
+
+
+
+
+&lt;&lt;englink [[Chim Chimney]]&gt;&gt;
 </pre>
 </div>
 <div created="20170324140233570" modified="20200225184858570" tags="[[אחות כהן]]" title="צ'ן">
