--- a/index.html
+++ b/index.html
@@ -16569,7 +16569,7 @@ We rise to play a greater part.
 &lt;&lt;englink [[HaAchims grocery store]]&gt;&gt;
 </pre>
 </div>
-<div created="20200823173415382" modified="20200823174637437" tags="[[כאן בגטו]] [[סיפורים אמיתיים]]" title="מכוניות כאן">
+<div created="20200823173415382" modified="20200823175053741" tags="[[כאן בגטו]] [[סיפורים אמיתיים]]" title="מכוניות כאן">
 <pre>
 [img[pictures/carshere.jpg]]
 
@@ -16577,7 +16577,7 @@ We rise to play a greater part.
 
 !!![[תומר]]:
 
-קומיאורי ואני מתקרבים למעבר החציה המוביל לפארק והיא אומרת לי: &quot;זה מדהים אותי שאנשים קונים או מכוניות שחורות, או אפורות, או לבנות&quot;, ואז מוסיפה: &quot;אני מאד מעריכה את אלה שקונים מכונית צבעונית&quot;, ומחייכת את חיוכה הנהדר.
+קומיאורי ואני מתקרבים למעבר החצייה המוביל לפארק והיא אומרת לי: &quot;זה מדהים אותי שאנשים קונים או מכוניות שחורות, או אפורות, או לבנות&quot;, ואז מוסיפה: &quot;אני מאד מעריכה את אלה שקונים מכונית צבעונית&quot;, ומחייכת את חיוכה הנהדר.
 
 
 
